--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <div class="ui middle aligned centered grid text container home-page-header">
         <h1 style="font-family: Ubuntu !important;" class="ui main header homepage">{{site.title}}</h1>
-        <p style="margin-top:0px;font-family: Ubuntu !important;" id="second-header">"Innovate. Create value. Do more with less."&nbsp;•&nbsp;
+        <p style="margin-top:0px;font-family: Ubuntu !important;" id="second-header">"Computer Science student at University of Southern California."&nbsp;•&nbsp;
           Honolulu, Hawaii</p>
         <div style="margin-top: 20px" id="navigation-links">
           <a style="margin-right:7.5px" href="{{ site.github }}" target="_blank"><i
