--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
   </nav>
   <!-- Description -->
   <div style="padding-top: .65rem !important" class="sidebar-item">
-    <p>NASA Fellow, STEM Mentor and Computer Science Student. UH Manoa '18. Formerly interned at IBM and Oceanit in Software Development.</p>
+    <p>Computer Science Student at USC '21. Passionate about Products, Health, and Education.</p>
   </div>
   <!-- Divider color -->
   <nav style="border-color: #18bc9c" class="sidebar-nav"></nav>
