--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
-  <link rel="icon" sizes="16x16 32x32" href="/images/h.png">
+  <link rel="icon" sizes="16x16 32x32" href="/images/profile.png">
 
   <!-- Semantic UI -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
